force-app/main/default/objects/Account/fields/Average_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Average_of_Opportunities__c</fullName>
    <formula>Sum_of_Opportunities__c /  Count_of_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average of Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>