force-app/main/default/objects/Account/fields/Successful_Customer_Story__c.field-meta.xml
<CustomField>
    <fullName>Successful_Customer_Story__c</fullName>
    <label>Successful Customer Story</label>
    <summaryFilterItems>
        <field>Customer_Feedback__c.Sucess__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Feedback__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>